--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: flex;
     flex-wrap: wrap;
     width: 940px;
@@ -15,21 +15,21 @@
 }
 .box:nth-child(1){
     background-color: #2196f3;
-    background-image: url(/icons/photo_2023-05-26_19-34-51.jpg);
+    background-image: url(/icons/cat.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100px;
 }
 .box:nth-child(2){
     background-color: #9c27b0;
-    background-image: url(/icons/photo_2023-05-26_19-34-35.jpg);
+    background-image: url(/icons/bird.png);
     background-repeat: repeat-x;
     background-position: center;
 
 }
 .box:nth-child(3){
     background-color: #009688;
-    background-image: url(/icons/photo_2023-05-26_19-34-58.jpg);
+    background-image: url(/icons/);
     background-repeat: repeat-y;
     background-position: 50px 0;
 }
@@ -39,4 +39,95 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: 150px;
+} */
+
+/* .overlay{
+    outline: 1px solid black;
+
+    max-width: 1200px;
+    height: 400px;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    background-image: linear-gradient(
+       to right,
+        rgba(255, 0, 0),
+        rgba(0, 255, 0)
+    ),
+    url(icons/fish.jpg);
+    background-position: center; 
+} */
+
+*{list-style: none;}
+
+.overlay{
+    outline: 1px solid black;
+
+    max-width: 1200px;
+    height: 400px;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    background-image: linear-gradient( 
+        to top left,
+        rgba(255,0,0, 0.5),
+        rgba(0,255,0, 0.5)),
+    url(/icons/cat.png); 
+    background-position: center;
+}
+
+.button{
+    display: inline-flex;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: blueviolet;
+    border-radius: 5px;
+    color: #fff;
+}
+
+.button::before{
+    content: '';
+
+    margin-right: 10px;
+
+    width: 25px;
+    height: 25px;
+    background-color: red; 
+    background-image: url(/icons/rocket-icon.png);
+    background-size:contain ;
+}
+
+.container{
+    display: flex;
+}
+
+.list-item {
+    width: 350px;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 1px 3px rgba(0, 0, 0, 0.12);
+}
+
+ .list-item::before{
+    content: '' ;
+    display: block;
+
+    height: 100px;
+
+    background-color: #ccc;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+} 
+
+.list-item.icon-delivery::before{
+    background-image: url(./icons/delivery-icon.png);
+}
+
+.list-item.icon-mobile::before{
+    background-image: url(/icons/mobile-icon.svg);
 }
